while logo in footer, updated favicon & spacing fixes on profile section

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -453,3 +453,12 @@ figcaption {
         margin: auto;
     }
 }
+img.footer-logo {
+    width: 2em;
+    position: absolute;
+    left: 1em;
+    opacity: 0.5;
+    &:hover {
+        opacity: 0.8;
+    }
+}
